@@ -12,6 +12,7 @@
   * reporting of unhandled codecs
   * NSF audio decoding via Nosefart
   * DVB plugin updated to new DVB API, DVB-C and DVB-T support
+  * gnome-vfs input plugin added
 	
 xine-lib (1-beta2)
   * what a GOOM! post plugin
